Fix bug 175532 Outgoing AIM messages have HTML line break prepended.

BUG: 175532

svn path=/trunk/KDE/kdenetwork/kopete/; revision=893722